[gd_scene load_steps=2 format=3 uid="uid://dd25a4mnb65y6"]

[ext_resource type="Script" path="res://scenes/LevelSelect.gd" id="1_s13uw"]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s13uw")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -272.0
offset_right = -58.0
offset_bottom = -136.0
scale = Vector2(4, 4)

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Level 1" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Level 1"

[node name="Level 2" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Level 2"

[node name="Level 3" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Level 3"

[node name="Back" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Level 1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Level 1" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Level 2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Level 2" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Level 2" to="." method="_on_levels_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Level 3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Level 3" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
